--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ langchain-core = "^0.3.10"
 langchain-community = "^0.3.2"
 langchain-openai = "^0.2.2"
 langchain-text-splitters = "^0.3.0"
-streamlit = "^1.35.0"
+streamlit = "^1.39.0"
 chromadb = "^0.5.13"
 requests = "^2.32.3"
 sentence-transformers = "^3.2.0"
@@ -21,6 +21,7 @@ torch = "^2.4.1"
 pypdf = "^5.0.1"
 lxml = "^5.3.0"
 docarray = "^0.40.0"
+fpdf = "^1.7.2"
 
 
 
